# delirium-scorecard

./: .env.development  .env.production  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  docker-compose.dev.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: code_checks.yml
backend/: Dockerfile  Dockerfile.dev  README.md  __init__.py  pyproject.toml
backend/api/: __init__.py  data.py  delirium.py  main.py  routes.py
backend/api/routes/: auth.py  delirium.py
backend/api/users/: auth.py  crud.py  data.py  db.py  utils.py
frontend/: .prettierrc.js  Dockerfile  Dockerfile.dev  next.config.mjs  package-lock.json  package.json  theme.ts
frontend/app/: globals.css  layout.tsx  page.tsx  theme-registry.tsx
frontend/app/components/: delirium-rates.tsx  patient-demographics.tsx  sidebar.tsx  with-auth.tsx
frontend/app/context/: auth.tsx
frontend/app/dashboard/: page.tsx
frontend/app/faq/: error.tsx  layout.tsx  loading.tsx  page.tsx
frontend/app/login/: logo.tsx  page.tsx
frontend/components/: DeliriumRates.tsx  Layout.tsx  PatientDemographics.tsx  TimeTrends.tsx  sidebar.tsx  time-trends.tsx
scripts/: create_demographics.py  delirium_rates.csv  demographics.csv  time_trends.csv  upload_to_minio.py
